# superpower-oss

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: check-version-sync.mjs  fetch-bun-runtime.mjs  generate-updater-manifest.mjs  sync-version.mjs
src/: App.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  db.rs  import_export.rs  lib.rs  main.rs  models.rs  tray.rs  updater.rs
src-tauri/src/commands/: mod.rs  runs.rs  scripts.rs  settings.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/notifications/: mod.rs  providers.rs
src-tauri/src/runtime/: bun.rs  mod.rs  runner.rs
src-tauri/src/scheduler/: cron.rs  mod.rs  monitors.rs
src-tauri/tests/fixtures/db/: v0.sql
src/app/: AppShell.test.tsx  AppShell.tsx
src/components/: JsonEditorField.test.tsx  JsonEditorField.tsx
src/features/home/: HomeView.test.tsx  HomeView.tsx
src/features/runs/: RunsView.tsx  runGroups.test.ts  runGroups.ts
src/features/scripts/: ScriptsView.test.tsx  ScriptsView.tsx  examples.ts  monacoSetup.test.ts  monacoSetup.ts
src/features/settings/: SettingsView.tsx  channelBuilder.ts
src/lib/: tauri.ts  toast.ts  updater.ts
src/store/: ui.ts
src/tests/: apiSchemas.test.ts  channelBuilder.test.ts
src/types/: api.ts
